--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1990/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<title>Our Love Story</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -62,7 +62,7 @@
 		</div>
 		<div id="copyright">
 			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />
-			Copyright © 2011 <a href='https://github.com/squirrelmaster/Love/tree/master/js'>squirrel</a> 2009-2011
+			Copyright © 2011 <a href=' http://love.squirrel.me'>squirrel</a> 2009-2011
 		</div>
 	</div>
 	<script type="text/javascript">
