--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div id="content">
 			<div id="code">
 				<span class="comments">/**</span><br />
-				<span class="space"/><span class="comments">* 我,</span><br />
+				<span class="space"/><span class="comments">* squirrel</span><br />
 				<span class="space"/><span class="comments">* so I .</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
 				Boy i = <span class="keyword">new</span> Boy(<span class="string">"hackerzhou"</span>);<br />
